<resources>
    <string name="app_name">AlertDialogApplication</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="custom_dialog_with_validations">Custom Dialog with validations</string>
    <string name="single_choice_dialog">Single Dialog</string>
    <string name="multiple_choice_dialog">Multiple Dialog</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="positive_button">Positive Button</string>
    <string name="positive_button_clicked">Positive button clicked</string>
    <string name="negative_button">Negative Button</string>
    <string name="negative_button_clicked">Negative button clicked</string>
    <string name="neutral_button">Neutral Button</string>
    <string name="neutral_button_clicked">Neutral button clicked</string>
    <string name="select_animal">Select Animal</string>
    <string name="horse_clicked">Horse Clicked</string>
    <string name="cow_clicked">Cor</string>
    <string name="camel_clicked">Camel</string>
    <string name="sheep_clicked">Sheep</string>
    <string name="goat_clicked">Goat</string>
    <string name="simple_alert_dialog_with_title_message">Simple alert dialog with title message</string>
    <string name="alert_dialog_with_single_choice"> alert dialog with single choice</string>
    <string name="alert_dialog_with_multiple_choice"> alert dialog with multiple choice</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enter_value">Enter Value</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_address">Enter address</string>
    <string name="he">He</string>
    <string name="she">She</string>
    <string name="other">Others</string>
    <string name="enter_gender">Enter gender</string>
    <string name="update">Update</string>
    <string name="your_name">Your Name</string>
    <string name="your_address">Your Address</string>
    <string name="your_gender">Your Gender</string>
    <string name="bottom_sheet">Bottom Sheet</string>
    <string name="address">12/12 XYZ Colony, near Chownk</string>
    <string name="item_clicked_dynamic">You have clicked %1$s </string>

</resources>