<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnAlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog" />

    <Button
        android:id="@+id/btnSingleChooiceDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_choice_dialog" />

    <Button
        android:id="@+id/btnMultipleChooiceDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiple_choice_dialog" />

    <Button
        android:id="@+id/btnCustomDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog" />

    <Button
        android:id="@+id/btnNextCustomActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog_with_validations" />

    <Button
        android:id="@+id/btnBottomSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_sheet" />

</LinearLayout>
</layout>